[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Pixelated Font Small.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Pixelated Font Normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://GlobalTimeLeft.gd" type="Script" id=3]
[ext_resource path="res://Timer.gd" type="Script" id=4]
[ext_resource path="res://Questions Answered.gd" type="Script" id=5]
[ext_resource path="res://Assets/Book Spritesheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/Answer_Button_Pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Vragen/Red Cross.png" type="Texture" id=8]
[ext_resource path="res://Assets/Answer_Button_Unpressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Vragen/Green Check.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/Answer_Button_Hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/Vragen/Background.png" type="Texture" id=12]
[ext_resource path="res://Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://Vragen Scenes/Scripts/Open Vraag.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Incorrect"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.75, 0.75 ), Vector2( 0.75, 0.75 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Time Left" type="Label" parent="CanvasLayer"]
margin_right = 100.0
margin_bottom = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Time Left"]
wait_time = 2700.0
autostart = true
script = ExtResource( 4 )

[node name="Questions Answered" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_top = 99.0
margin_right = -72.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 1 )
text = "0/40"
align = 2
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animated Sprite" type="AnimatedSprite" parent="CanvasLayer/Questions Answered"]
position = Vector2( 75, -3 )
frames = SubResource( 14 )
frame = 1
playing = true

[node name="Player" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 512, 300 )

[node name="Control" type="Control" parent="."]
margin_left = 6.0
margin_top = 150.0
margin_right = 46.0
margin_bottom = 184.0

[node name="Gebruiker Antwoord" type="TextEdit" parent="Control"]
margin_left = 44.0
margin_top = -17.0
margin_right = 968.0
margin_bottom = 363.0
custom_fonts/font = ExtResource( 2 )
text = "Antwoord:"
wrap_enabled = true

[node name="Vraag" type="Label" parent="Control"]
margin_left = 6.0
margin_top = -140.0
margin_right = 1006.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 2 )
text = "Welk effect hadden grazers op het silicagehalte van grassoorten?"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Confirm" type="TextureButton" parent="Control"]
margin_left = 811.0
margin_top = 377.0
margin_right = 1811.0
margin_bottom = 517.0
rect_scale = Vector2( 0.2, 0.471179 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Control/Confirm"]
margin_right = 200.0
margin_bottom = 46.0
rect_scale = Vector2( 5, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Confirm"
align = 1
valign = 1

[node name="Juist" type="TextureButton" parent="Control"]
visible = false
margin_left = 305.0
margin_top = 377.0
margin_right = 1305.0
margin_bottom = 517.0
rect_scale = Vector2( 0.2, 0.471179 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Control/Juist"]
margin_right = 200.0
margin_bottom = 46.0
rect_scale = Vector2( 5, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Juist"
align = 1
valign = 1

[node name="Onjuist" type="TextureButton" parent="Control"]
visible = false
margin_left = 509.0
margin_top = 377.0
margin_right = 1509.0
margin_bottom = 517.0
rect_scale = Vector2( 0.2, 0.471179 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Control/Onjuist"]
margin_right = 200.0
margin_bottom = 46.0
rect_scale = Vector2( 5, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Onjuist"
align = 1
valign = 1

[node name="Correcte Antwoord" type="TextEdit" parent="Control"]
visible = false
margin_left = 44.0
margin_top = 187.0
margin_right = 968.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 2 )
text = "Juiste antwoord:
Er ontstonden langzamerhand grassoorten die meer silica opnamen waardoor ze harder en ‘graasbestendiger’ werden."
readonly = true
wrap_enabled = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
z_index = -1
texture = ExtResource( 12 )

[node name="Result" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Result"]
anims/Correct = SubResource( 1 )
anims/Incorrect = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Control/Juist" to="." method="_on_Juist_pressed"]
[connection signal="pressed" from="Control/Onjuist" to="." method="_on_Onjuist_pressed"]
[connection signal="animation_finished" from="Result/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
